--- a/CareerExplorer.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CareerExplorer.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,16 @@
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
+                <input asp-for="Input.Name" class="form-control" aria-required="true" placeholder="Enter your name" />
+                <label asp-for="Input.Name">Name</label>
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Surname" class="form-control" aria-required="true" placeholder="Enter your surname" />
+                <label asp-for="Input.Surname">Surname</label>
+                <span asp-validation-for="Input.Surname" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
@@ -27,6 +37,28 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+                <label class="button">
+                <input type="radio" asp-for="Input.Role" value="Recruiter" />
+                Recruiter
+                </label>
+                <label class="button">
+                <input type="radio" asp-for="Input.Role" value="JobSeeker" />
+                JobSeeker
+                </label>
+            @*@foreach (var role in Model.Input.Roles)
+            {
+                <label class="button">
+                    <input type="radio" asp-for="Input.Role" value="@role" />
+
+                    @role
+
+                    <br />
+                </label>
+                
+            }*@
+            @*<div class="form-floating mb-3">
+                <select asp-for="Input.Role" asp-items="@Model.Input.Roles"></select>
+            </div>*@
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
