--- a/CareerExplorer.Web/wwwroot/css/site.css
+++ b/CareerExplorer.Web/wwwroot/css/site.css
@@ -20,3 +20,27 @@ html {
 body {
   margin-bottom: 60px;
 }
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #eee;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+}
+
+    .button:hover {
+        background-color: #ddd;
+    }
+
+    /* Add this style for the checked radio button */
+    .button input[type="radio"]:checked + label {
+        background-color: #555;
+        color: #fff;
+    }
+
+    /* Add this style to uncheck radio buttons */
+    .button input[type="radio"]:not(:checked) + label {
+        background-color: #eee;
+        color: #000;
+    }
