--- a/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,20 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using CareerExplorer.Shared;
+@using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
+        @if(User.IsInRole(StaticDetails.RoleJobSeeker))
+        {
+            <a asp-controller="JobSeekerProfile" asp-action="GetProfile">Profile</a>
+        }
+        else if (User.IsInRole(StaticDetails.RoleRecruiter))
+        {
+            <a asp-controller="RecruiterProfile" asp-action="GetProfile">Profile</a>
+        }
+        <li class="nav-item">
         <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
     <li class="nav-item">
