--- a/CareerExplorer.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CareerExplorer.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,10 +6,9 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
+<div class="row mb-3">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
@@ -28,11 +27,11 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
                 <label class="button">
-                <input type="radio" asp-for="Input.Role" value="Recruiter" />
+                <input class="form-check-input" type="radio" asp-for="Input.Role" value="Recruiter" />
                 Recruiter
                 </label>
                 <label class="button">
-                <input type="radio" asp-for="Input.Role" value="JobSeeker" />
+                <input class="form-check-input" type="radio" asp-for="Input.Role" value="JobSeeker" />
                 JobSeeker
                 </label>
             @*@foreach (var role in Model.Input.Roles)
@@ -49,10 +48,10 @@
             @*<div class="form-floating mb-3">
                 <select asp-for="Input.Role" asp-items="@Model.Input.Roles"></select>
             </div>*@
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn btn-primary mt-3">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to register.</h3>
             <hr />
@@ -81,7 +80,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
