--- a/CareerExplorer.Web/Views/RecruiterProfile/GetProfile.cshtml
+++ b/CareerExplorer.Web/Views/RecruiterProfile/GetProfile.cshtml
@@ -1,8 +1,11 @@
-﻿@using CareerExplorer.Core.Entities;
-@model Recruiter
+﻿@using CareerExplorer.Web.DTO
 
-<div class="row">
-    <div class="col-md-6">
+@model RecruiterProfileDTO
+<div class="row mb-3">
+    <div class="col-md-2">
+        <partial name="_RecrMenuPartial" />
+    </div>
+    <div class="col-md-10">
         <form method="post" asp-action="GetProfile">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <input asp-for="Id" hidden />
@@ -10,13 +13,24 @@
             <div class="form-floating mb-3">
                 <input asp-for="Name" class="form-control" placeholder="Enter your name" />
                 <label asp-for="Name" class="form-label"></label>
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Surname" class="form-control" placeholder="Enter your surname" />
                 <label asp-for="Surname" class="form-label"></label>
                 <span asp-validation-for="Surname" class="text-danger"></span>
             </div>
-            <button asp-controller="RecruiterProfile" asp-action="GetProfile" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            <div class="form-floating mb-3">
+                <input asp-for="Company" class="form-control" placeholder="Enter your company" />
+                <label asp-for="Company" class="form-label"></label>
+                <span asp-validation-for="Company" class="text-danger"></span>
+            </div>
+             <div class=" mb-3">
+                    <label asp-for="CompanyDescription">Provide some information about your company</label>
+                    <textarea rows="7" asp-for="CompanyDescription" class="form-control"></textarea>
+                    <span asp-validation-for="CompanyDescription" class="text-danger"></span>
+                </div>
+            <button asp-controller="RecruiterProfile" asp-action="GetProfile" type="submit" class="w-100 btn btn btn-primary">Save</button>
         </form>
     </div>
 </div>
