apply on vacancy starting implementation

--- a/CareerExplorer.Web/Views/Vacancy/GetAll.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/GetAll.cshtml
@@ -4,22 +4,18 @@
 
 @model IEnumerable<VacancyDTO>
 @inject UserManager<IdentityUser> UserManager
-@inject UserManager<IdentityUser> UserManager
+
 <div class="row">
     <div class="col-md-8">
         @foreach (var vacancy in Model)
         {
             <div class="card bg-secondary mb-3">
-                <div class="card-header">@vacancy.Title</div>
+                <div class="card-header"><a asp-controller="Vacancy" asp-action="GetVacancy" asp-route-id="@vacancy.Id">@vacancy.Title</a></div>
                 <div class="card-body">
                     <p class="card-text">@vacancy.Description</p>
                 </div>
                 <div class="card-footer">
                     <span>@UserManager.GetUserName(User)</span>
-                    @if (User.IsInRole(UserRoles.RoleJobSeeker))
-                    {
-                        <a class="btn btn-primary" asp-controller="#" asp-action="#">Apply</a>
-                    }
                 </div>
 
             </div>
