--- a/CareerExplorer.Web/Views/Shared/_FileContentPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_FileContentPartial.cshtml
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="viewCvModalLabel">CV Content</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button id="closeCvBtn" type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -11,7 +11,7 @@
                 <pre id="cvContent"></pre>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button id="closeCvBtn" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
