--- a/CareerExplorer.Web/Views/Shared/_Layout.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
+                    <partial name="_LanguagesPartial"/>
                 </div>
             </div>
         </nav>
