--- a/CareerExplorer.Web/Views/Vacancy/CreatedVacancies.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/CreatedVacancies.cshtml
@@ -1,17 +1,18 @@
-﻿@model IEnumerable<CareerExplorer.Web.DTO.VacancyDTO>
-
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@model IEnumerable<CareerExplorer.Web.DTO.VacancyDTO>
+@inject IViewLocalizer Localizer
 <div class="row">
     <div class="col-md-2">
         <partial name="_RecrMenuPartial" />
     </div>
     <div class="col-md-10">
-        <a class="btn btn-primary" asp-controller="Vacancy" asp-action="Create">Create new</a>
+        <a class="btn btn-primary" asp-controller="Vacancy" asp-action="Create">@Localizer["Create new"]</a>
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">Title</th>
-                    <th scope="col">Available</th>
-                    <th scope="col">Creation Date</th>
+                    <th scope="col">@Localizer["Title"]</th>
+                    <th scope="col">@Localizer["Available"]</th>
+                    <th scope="col">@Localizer["Creation Date"]</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -20,13 +21,13 @@
                 {
                     <tr>
                         <th>@vacancy.Title</th>
-                        <th>@(vacancy.IsAvailable ? "Yes" : "No")</th>
+                        <th>@(vacancy.IsAvailable ? @Localizer["Yes"] : @Localizer["No"])</th>
                         <th>@vacancy.CreatedDate.ToShortDateString()</th>
                         <th>
                             <div class="w-50 btn-group" role="group">
-                                <a asp-controller="Vacancy" asp-action="Edit" asp-route-id="@vacancy.Id" class="btn btn-primary me-3">Edit</a>
-                                <a asp-controller="Vacancy" asp-action="Delete" asp-route-id="@vacancy.Id" class="btn btn-primary">Delete</a>
-                                <a asp-controller="Vacancy" asp-action="GetApplicants" asp-route-id="@vacancy.Id" class="btn btn-primary">Applicants</a>
+                                <a asp-controller="Vacancy" asp-action="Edit" asp-route-id="@vacancy.Id" class="btn btn-primary me-3">@Localizer["Edit"]</a>
+                                <a asp-controller="Vacancy" asp-action="Delete" asp-route-id="@vacancy.Id" class="btn btn-primary me-3">@Localizer["Delete"]</a>
+                                <a asp-controller="Vacancy" asp-action="GetApplicants" asp-route-id="@vacancy.Id" class="btn btn-primary">@Localizer["Applicants"]</a>
                             </div>
                         </th>
                     </tr>
