--- a/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
@@ -1,6 +1,8 @@
-﻿@using CareerExplorer.Web.DTO
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using CareerExplorer.Web.DTO
 
 @model CreateOrEditVacancyDTO
+@inject IViewLocalizer Localizer
 <div class="row mb-3">
     <div class="col-md-2">
         <partial name="_RecrMenuPartial" />
@@ -11,26 +13,29 @@
             <input asp-for="Id" hidden />
             <input asp-for="CreatorId" hidden />
             <div class="form-floating mb-3">
-                <input asp-for="Title" class="form-control" placeholder="Title" />
+                <input asp-for="Title" class="form-control" placeholder="@Localizer["Title"]" />
                 <label asp-for="Title" class="form-label"></label>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class=" mb-3">
-                <label asp-for="Description">Description</label>
+                <label asp-for="Description">@Localizer["Description"]</label>
                 <textarea rows="7" asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="mb-3">
             <label >
                 <input class="form-check-input" type="radio" asp-for="IsAvailable" value="true" />
-                Available
+                    @Localizer["Available"]
                 </label>
                 <label >
                 <input class="form-check-input" type="radio" asp-for="IsAvailable" value="false" />
-                Not Available
+                    @Localizer["Not Available"]
                 </label>
         </div>
-            <button asp-controller="Vacancy" asp-action="Edit" type="submit" class="w-100 btn btn btn-primary">Save</button>
+            <button asp-controller="Vacancy" asp-action="Edit" type="submit" class="w-100 btn btn btn-primary">@Localizer["Save"]</button>
+            <a asp-controller="Vacancy" asp-action="CreatedVacancies" class="btn btn-secondary" style="width:150px">
+                @Localizer["Back To List"]
+        </a>
         </form>
     </div>
 </div>
