skillTags crud, position crud, adding ability to select tags

--- a/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
@@ -32,8 +32,8 @@
                     @Localizer["Not Available"]
                 </label>
         </div>
-            <button asp-controller="Vacancy" asp-action="Edit" type="submit" class="w-100 btn btn btn-primary">@Localizer["Save"]</button>
-            <a asp-controller="Vacancy" asp-action="CreatedVacancies" class="btn btn-secondary" style="width:150px">
+            <button asp-controller="Vacancy" asp-action="Edit" type="submit" class=" btn btn btn-primary">@Localizer["Save"]</button>
+            <a asp-controller="Vacancy" asp-action="CreatedVacancies" class="btn btn-secondary" >
                 @Localizer["Back To List"]
         </a>
         </form>
