--- a/CareerExplorer.Web/Views/Shared/_Layout.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CareerExplorer.Web.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/bootswatch.css" />
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/smoothness/jquery-ui.css">
 </head>
 <body>
     <header>
