--- a/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,6 @@
           <div class="dropdown-menu">
                     <a class="dropdown-item" asp-controller="JobSeekerProfile" asp-action="GetProfile">Profile</a>
             
-            <a class="dropdown-item" href="#">Something else here</a>
             <div class="dropdown-divider"></div>
             <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
@@ -28,8 +27,20 @@
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> @UserManager.GetUserName(User)</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" asp-controller="RecruiterProfile" asp-action="GetProfile">Profile</a>
-
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-divider"></div>
+                    <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                        <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
+                    </form>
+                </div>
+            </li>
+        }
+        else if (User.IsInRole(UserRoles.Admin))
+        {
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> @UserManager.GetUserName(User)</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" asp-controller="Admin" asp-action="GetSkillsTags">Tags</a>
+                    <a class="dropdown-item" asp-controller="Admin" asp-action="GetPositions">Positions</a>
                     <div class="dropdown-divider"></div>
                     <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                         <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
