--- a/CareerExplorer.Web/Views/Shared/_RecrMenuPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_RecrMenuPartial.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+
+@inject IViewLocalizer Localizer
 <div class="list-group">
-    <a asp-controller="RecruiterProfile" asp-action="GetProfile" type="button" class="btn btn-primary">Profile</a>
-    <a asp-controller="Vacancy" asp-action="CreatedVacancies" type="button" class="btn btn-primary">Vacancies</a>
-  <a href="#" class="list-group-item list-group-item-action disabled">Morbi leo risus</a>
+    <a asp-controller="RecruiterProfile" asp-action="GetProfile" type="button" class="btn btn-primary">@Localizer["Profile"]</a>
+    <a asp-controller="Vacancy" asp-action="CreatedVacancies" type="button" class="btn btn-primary">@Localizer["Vacancies"]</a>
 </div>
