--- a/CareerExplorer.Web/Views/Admin/GetPositions.cshtml
+++ b/CareerExplorer.Web/Views/Admin/GetPositions.cshtml
@@ -1,17 +1,17 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization
 @model IEnumerable<CareerExplorer.Web.DTO.PositionDTO>
-
+@inject IViewLocalizer Localizer
 <div class="row">
     <div class="col-md-2">
         <partial name="_AdminMenuPartial" />
     </div>
     <div class="col-md-10">
-        <a class="btn btn-primary" asp-controller="Admin" asp-action="CreatePosition">Add Position</a>
+        <a class="btn btn-primary" asp-controller="Admin" asp-action="CreatePosition">@Localizer["Add Position"]</a>
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
+                    <th scope="col">@Localizer["Name"]</th>
+                    <th scope="col">@Localizer["Name"]</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -23,8 +23,8 @@
                         <th>@tag.Name</th>
                         <th>
                             <div class="w-50 btn-group" role="group">
-                                <a asp-controller="Admin" asp-action="EditPosition" asp-route-id="@tag.Id" class="btn btn-primary me-3">Edit</a>
-                                <a asp-controller="Admin" asp-action="DeletePosition" asp-route-id="@tag.Id" class="btn btn-primary me-3">Delete</a>
+                                <a asp-controller="Admin" asp-action="EditPosition" asp-route-id="@tag.Id" class="btn btn-primary me-3">@Localizer["Name"]</a>
+                                <a asp-controller="Admin" asp-action="DeletePosition" asp-route-id="@tag.Id" class="btn btn-primary me-3">@Localizer["Name"]</a>
                             </div>
                         </th>
                     </tr>
