--- a/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,8 @@
 ﻿@using CareerExplorer.Shared;
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.Localization
 
+@inject IViewLocalizer Localizer
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 <ul class="navbar-nav">
@@ -11,11 +13,11 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> @UserManager.GetUserName(User)</a>
           <div class="dropdown-menu">
-                    <a class="dropdown-item" asp-controller="JobSeekerProfile" asp-action="GetProfile">Profile</a>
+                    <a class="dropdown-item" asp-controller="JobSeekerProfile" asp-action="GetProfile">@Localizer["Profile"]</a>
             
             <div class="dropdown-divider"></div>
-            <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
+                    <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("GetAll", "Vacancy", new { area = "" })">
+                        <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">@Localizer["Logout"]</button>
             </form>
           </div>
         </li>
@@ -26,10 +28,10 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> @UserManager.GetUserName(User)</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" asp-controller="RecruiterProfile" asp-action="GetProfile">Profile</a>
+                    <a class="dropdown-item" asp-controller="RecruiterProfile" asp-action="GetProfile">@Localizer["Profile"]</a>
                     <div class="dropdown-divider"></div>
-                    <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                        <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
+                    <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("GetAll", "Vacancy", new { area = "" })">
+                        <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">@Localizer["Logout"]</button>
                     </form>
                 </div>
             </li>
@@ -39,11 +41,11 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> @UserManager.GetUserName(User)</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" asp-controller="Admin" asp-action="GetSkillsTags">Tags</a>
-                    <a class="dropdown-item" asp-controller="Admin" asp-action="GetPositions">Positions</a>
+                    <a class="dropdown-item" asp-controller="Admin" asp-action="GetSkillsTags">@Localizer["Tags"]</a>
+                    <a class="dropdown-item" asp-controller="Admin" asp-action="GetPositions">@Localizer["Positions"]</a>
                     <div class="dropdown-divider"></div>
-                    <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                        <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
+                    <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("GetAll", "Vacancy", new { area = "" })">
+                        <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">@Localizer["Logout"]</button>
                     </form>
                 </div>
             </li>
@@ -52,10 +54,10 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">@Localizer["Register"]</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">@Localizer["Login"]</a>
     </li>
 }
 </ul>
