--- a/CareerExplorer.Web/Views/Vacancy/GetApplicants.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/GetApplicants.cshtml
@@ -1,7 +1,8 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization
 @using CareerExplorer.Web.DTO;
-@model IEnumerable<ApplicantDTO>
 
+@model IEnumerable<ApplicantDTO>
+@inject IViewLocalizer Localizer
 <div class="row">
     <div class="col-md-2">
         <partial name="_RecrMenuPartial" />
@@ -10,8 +11,8 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Surname</th>
+                    <th scope="col">@Localizer["Name"]</th>
+                    <th scope="col">@Localizer["Surname"]</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -24,7 +25,7 @@
                               <th>
                            <div class="w-50 btn-group" role="group">
                                 <a asp-controller="Vacancy" asp-action="GetApplicant" asp-route-jobSeekerId="@applicant.Id"
-                                asp-route-vacancyId="@applicant.VacancyId"class="btn btn-primary">View profile</a>
+                               asp-route-vacancyId="@applicant.VacancyId" class="btn btn-primary">@Localizer["View profile"]</a>
                                 </div>
                             </th>
                      </tr>
