--- a/CareerExplorer.Web/Views/Vacancy/GetVacancy.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/GetVacancy.cshtml
@@ -1,10 +1,11 @@
 ﻿@using CareerExplorer.Web.DTO;
 @using Microsoft.AspNetCore.Identity;
 @using CareerExplorer.Shared;
+@using Microsoft.AspNetCore.Mvc.Localization
 @model VacancyDTO
 
 @inject UserManager<IdentityUser> UserManager
-
+@inject IViewLocalizer Localizer
 <div class="container-md">
     <div class="row">
         <div class="col-md-8">
@@ -18,18 +19,18 @@
                 @if(!Model.IsApplied)
                 {
                     <div id="apply-container">
-                    <button class="btn btn-primary mt-3 mb-3" id="apply-button">Apply</button>
+                        <button class="btn btn-primary mt-3 mb-3" id="apply-button">@Localizer["Apply"]</button>
                     <form id="application-form" style="display:none;">
                         <input id="id-input" name="vacancyId" value="@Model.Id" type="hidden">
-                            <label for="file-input" class="form-label mt-4">Attach your CV (.pdf)</label>
+                            <label for="file-input" class="form-label mt-4">@Localizer["Attach"]</label>
                             <input class="form-control" type="file" id="file-input">
-                            <button style="display:block" class="btn btn-primary mt-3" id="apply-btn" type="post">Submit</button>
+                            <button style="display:block" class="btn btn-primary mt-3" id="apply-btn" type="post">@Localizer["Submit"]</button>
                     </form>
                     </div>
                 }
                 else
                 {
-                    <button style="display:block" class="btn btn-primary mt-3" disabled>Applied</button>
+                    <button style="display:block" class="btn btn-primary mt-3" disabled>@Localizer["Applied"]</button>
                 }
                 
             }
@@ -70,7 +71,7 @@
                     contentType: false,
                     processData: false,
                     success: function (response) {
-                        $('#apply-btn').text('Sent');
+                        $('#apply-btn').text('@Localizer["Sent"]');
                         $('#apply-btn').prop('disabled', true);
                         $('#file-input').prop('disabled', true);
                     },
